Fixes for dbus.

--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -58,11 +58,12 @@ set(PL_ROOT_DIR     "${CMAKE_CURRENT_SOURCE_DIR}")
 find_library(STD_CPP_FS stdc++fs)
 #find_package(Qt5 COMPONENTS Core Widgets REQUIRED)
 #find_package(LibClang)
-find_package(LLVM REQUIRED CONFIG)
+#find_package(LLVM REQUIRED CONFIG)
 include(cmake/Config.cmake)
 include(cmake/Build.cmake)
 include(cmake/Project.cmake)
 include(cmake/Target.cmake)
+find_package(DBus REQUIRED)
 
 
 pl_split()
