--- a/.github/workflows/linux_builds.yml
+++ b/.github/workflows/linux_builds.yml
@@ -22,7 +22,7 @@ jobs:
 
     - name: Install Requirements
       # Install all required packages
-      run: sudo apt update && sudo apt install -y dbus
+      run: sudo apt update && sudo apt install -y dbus libdbus-1-dev
 
     - name: Configure CMake
       # Configure CMake in a 'build' subdirectory. `CMAKE_BUILD_TYPE` is only required if you are using a single-configuration generator such as make.
