Clean up and started implementation of Gui library.

--- a/Tutorial/00.Essentials/00.02.CmdLine/CMakeLists.txt
+++ b/Tutorial/00.Essentials/00.02.CmdLine/CMakeLists.txt
@@ -27,6 +27,8 @@ pl_add_target(
   NAMESPACE RE
   FILES_CMAKE
     ${CMAKE_CURRENT_SOURCE_DIR}/CmdLine_files.cmake
+  PLATFORM_INCLUDE_FILES
+    ${CMAKE_CURRENT_SOURCE_DIR}/CmdLine_${PAL_PLATFORM_NAME_LOWERCASE}.cmake
   INCLUDE_DIRECTORIES
     PUBLIC
       ${PL_CONFIG_FILE_LOCATION}
