--- a/Tutorial/01.Frontends/01.01.FrontendOS/CMakeLists.txt
+++ b/Tutorial/01.Frontends/01.01.FrontendOS/CMakeLists.txt
@@ -26,19 +26,21 @@ pl_add_target(
   NAME 01.01.FrontendOS EXECUTABLE
   NAMESPACE RE
   FILES_CMAKE
-  ${CMAKE_CURRENT_SOURCE_DIR}/FrontendOS_files.cmake
+    ${CMAKE_CURRENT_SOURCE_DIR}/FrontendOS_files.cmake
+  PLATFORM_INCLUDE_FILES
+    ${CMAKE_CURRENT_SOURCE_DIR}/FrontendOS_${PAL_PLATFORM_NAME_LOWERCASE}.cmake
   INCLUDE_DIRECTORIES
-  PUBLIC
-  ${PL_CONFIG_FILE_LOCATION}
-  ${CMAKE_CURRENT_SOURCE_DIR}/Public
-  ${CMAKE_CURRENT_SOURCE_DIR}/Private
+    PUBLIC
+      ${PL_CONFIG_FILE_LOCATION}
+      ${CMAKE_CURRENT_SOURCE_DIR}/Public
+      ${CMAKE_CURRENT_SOURCE_DIR}/Private
   BUILD_DEPENDENCIES
-  PUBLIC
-  RECore
+    PUBLIC
+      RECore
   COMPILE_DEFINITIONS
-  PUBLIC
-  ${${PAL_PLATFORM_NAME_UPPERCASE}_COMPILE_DEFS}
-  ${PAL_PLATFORM_NAME_UPPERCASE}
+    PUBLIC
+      ${${PAL_PLATFORM_NAME_UPPERCASE}_COMPILE_DEFS}
+      ${PAL_PLATFORM_NAME_UPPERCASE}
   TARGET_PROPERTIES
-  -fPIC
+    -fPIC
 )
