Commented out the Tools directory. We will not need it in the next releases

--- a/Engine/CMakeLists.txt
+++ b/Engine/CMakeLists.txt
@@ -23,4 +23,4 @@
 ################################################################################
 pl_add_subdirectory(Source)
 pl_add_subdirectory(Samples)
-pl_add_subdirectory(Tools)
+#pl_add_subdirectory(Tools)
