--- a/.github/workflows/linux_builds.yml
+++ b/.github/workflows/linux_builds.yml
@@ -28,7 +28,7 @@ jobs:
     - name: Configure CMake
       # Configure CMake in a 'build' subdirectory. `CMAKE_BUILD_TYPE` is only required if you are using a single-configuration generator such as make.
       # See https://cmake.org/cmake/help/latest/variable/CMAKE_BUILD_TYPE.html?highlight=cmake_build_type
-      run: cmake -B ${{github.workspace}}/build -DCMAKE_BUILD_TYPE=${{env.BUILD_TYPE}} -DCMAKE_C_COMPILER=${{COMPILER}} -DCMAKE_CXX_COMPILER=${{COMPILER}}++ -DPL_EXTERNAL_LIBRARIES=/tmp/racoonengine/
+      run: cmake -B ${{github.workspace}}/build -DCMAKE_BUILD_TYPE=${{env.BUILD_TYPE}} -DCMAKE_C_COMPILER=${{env.COMPILER}} -DCMAKE_CXX_COMPILER=${{env.COMPILER}}++ -DPL_EXTERNAL_LIBRARIES=/tmp/racoonengine/
 
     - name: Build
       # Build your program with the given configuration
