--- a/Engine/Samples/CMakeLists.txt
+++ b/Engine/Samples/CMakeLists.txt
@@ -21,4 +21,4 @@
 ################################################################################
 # Current package
 ################################################################################
-pl_add_subdirectory(Examples)
+re_add_subdirectory(Examples)
