--- a/Tutorial/01.Frontends/01.01.FrontendOS/CMakeLists.txt
+++ b/Tutorial/01.Frontends/01.01.FrontendOS/CMakeLists.txt
@@ -22,7 +22,7 @@
 ##################################################
 ## Project
 ##################################################
-pl_add_target(
+re_add_target(
   NAME 01.01.FrontendOS EXECUTABLE
   NAMESPACE RE
   FILES_CMAKE
