--- a/Tutorial/01.Frontends/CMakeLists.txt
+++ b/Tutorial/01.Frontends/CMakeLists.txt
@@ -21,4 +21,4 @@
 ################################################################################
 # Current package
 ################################################################################
-pl_add_subdirectory(01.01.FrontendOS)
+re_add_subdirectory(01.01.FrontendOS)
