--- a/Tutorial/02.Rendering/02.02.ProjectCompiler/CMakeLists.txt
+++ b/Tutorial/02.Rendering/02.02.ProjectCompiler/CMakeLists.txt
@@ -22,7 +22,7 @@
 ##################################################
 ## Project
 ##################################################
-pl_add_target(
+re_add_target(
 	NAME 02.02.ProjectCompiler EXECUTABLE
 	NAMESPACE RE
 	FILES_CMAKE
