--- a/cmake/Config/RacoonEngine.h.in
+++ b/cmake/Config/RacoonEngine.h.in
@@ -20,10 +20,10 @@
 
 #pragma once
 
-#define PL_NAME             "${PL_PROJECT_NAME}"
+#define RE_NAME             "${RE_PROJECT_NAME}"
 
-#define PL_VERSION_MAJOR    ${PL_PROJECT_VERSION_MAJOR}
-#define PL_VERSION_MINOR    ${PL_PROJECT_VERSION_MINOR}
-#define PL_VERSION_PATCH    ${PL_PROJECT_VERSION_PATCH}
-#define PL_VERSION_RELEASE  "${PL_PROJECT_VERSION_RELEASE}"
-#define PL_SUFFIX           "${PL_PROJECT_VERSION_SUFFIX}"
+#define RE_VERSION_MAJOR    ${RE_PROJECT_VERSION_MAJOR}
+#define RE_VERSION_MINOR    ${RE_PROJECT_VERSION_MINOR}
+#define RE_VERSION_PATCH    ${RE_PROJECT_VERSION_PATCH}
+#define RE_VERSION_RELEASE  "${RE_PROJECT_VERSION_RELEASE}"
+#define RE_SUFFIX           "${RE_PROJECT_VERSION_SUFFIX}"
