--- a/Engine/Source/Base/REGui/CMakeLists.txt
+++ b/Engine/Source/Base/REGui/CMakeLists.txt
@@ -22,7 +22,7 @@
 ##################################################
 ## Project
 ##################################################
-pl_add_target(
+re_add_target(
   NAME REGui SHARED
   NAMESPACE RE
   FILES_CMAKE
@@ -32,7 +32,7 @@ pl_add_target(
   #${CMAKE_CURRENT_SOURCE_DIR}/REGui_${PAL_PLATFORM_NAME_LOWERCASE}.cmake
   INCLUDE_DIRECTORIES
   PUBLIC
-  ${PL_CONFIG_FILE_LOCATION}
+  ${RE_CONFIG_FILE_LOCATION}
   ${CMAKE_CURRENT_SOURCE_DIR}/Public
   ${CMAKE_CURRENT_SOURCE_DIR}/Private
   BUILD_DEPENDENCIES
