--- a/Engine/Tools/REHeaderTool/CMakeLists.txt
+++ b/Engine/Tools/REHeaderTool/CMakeLists.txt
@@ -21,7 +21,7 @@
 ##################################################
 ## Project
 ##################################################
-pl_add_target(
+re_add_target(
   NAME REHeaderTool EXECUTABLE
   NAMESPACE RE
   FILES_CMAKE
@@ -30,7 +30,7 @@ pl_add_target(
     ${CMAKE_CURRENT_SOURCE_DIR}/REHeaderTool_${PAL_PLATFORM_NAME_LOWERCASE}.cmake
   INCLUDE_DIRECTORIES
     PUBLIC
-      ${PL_CONFIG_FILE_LOCATION}
+      ${RE_CONFIG_FILE_LOCATION}
       ${CMAKE_CURRENT_SOURCE_DIR}/Public
       ${CMAKE_CURRENT_SOURCE_DIR}/Private
   BUILD_DEPENDENCIES
