--- a/Tutorial/00.Essentials/00.01.HelloWorld/CMakeLists.txt
+++ b/Tutorial/00.Essentials/00.01.HelloWorld/CMakeLists.txt
@@ -22,7 +22,7 @@
 ##################################################
 ## Project
 ##################################################
-pl_add_target(
+re_add_target(
   NAME 00.01.HelloWorld EXECUTABLE
   NAMESPACE RE
   FILES_CMAKE
