Updates command names for cmake related functions, methods, and variables. More work on the gui implementation, where we should work on another approach.

--- a/Tutorial/00.Essentials/00.02.CmdLine/CMakeLists.txt
+++ b/Tutorial/00.Essentials/00.02.CmdLine/CMakeLists.txt
@@ -31,7 +31,7 @@ re_add_target(
     ${CMAKE_CURRENT_SOURCE_DIR}/CmdLine_${PAL_PLATFORM_NAME_LOWERCASE}.cmake
   INCLUDE_DIRECTORIES
     PUBLIC
-      ${PL_CONFIG_FILE_LOCATION}
+      ${RE_CONFIG_FILE_LOCATION}
       ${CMAKE_CURRENT_SOURCE_DIR}/Public
       ${CMAKE_CURRENT_SOURCE_DIR}/Private
   BUILD_DEPENDENCIES
