--- a/Tutorial/01.Frontends/01.02.Gui/CMakeLists.txt
+++ b/Tutorial/01.Frontends/01.02.Gui/CMakeLists.txt
@@ -31,13 +31,15 @@ re_add_target(
   ${CMAKE_CURRENT_SOURCE_DIR}/Gui_${PAL_PLATFORM_NAME_LOWERCASE}.cmake
   INCLUDE_DIRECTORIES
   PUBLIC
-  ${PL_CONFIG_FILE_LOCATION}
+  ${RE_CONFIG_FILE_LOCATION}
   ${CMAKE_CURRENT_SOURCE_DIR}/Public
   ${CMAKE_CURRENT_SOURCE_DIR}/Private
   BUILD_DEPENDENCIES
   PUBLIC
   RECore
   REGui
+  RERHI
+  RERenderer
   COMPILE_DEFINITIONS
   PUBLIC
   ${${PAL_PLATFORM_NAME_UPPERCASE}_COMPILE_DEFS}
