--- a/Tutorial/02.Rendering/02.03.HighLevel/CMakeLists.txt
+++ b/Tutorial/02.Rendering/02.03.HighLevel/CMakeLists.txt
@@ -31,7 +31,7 @@ re_add_target(
   ${CMAKE_CURRENT_SOURCE_DIR}/HighLevel_${PAL_PLATFORM_NAME_LOWERCASE}.cmake
   INCLUDE_DIRECTORIES
   PUBLIC
-  ${PL_CONFIG_FILE_LOCATION}
+  ${RE_CONFIG_FILE_LOCATION}
   ${CMAKE_CURRENT_SOURCE_DIR}/Public
   ${CMAKE_CURRENT_SOURCE_DIR}/Private
   ${DBUS_INCLUDE_DIRS}
@@ -60,7 +60,7 @@ re_add_target(
   ${${PAL_PLATFORM_NAME_UPPERCASE}_COMPILE_DEFS}
   ${PAL_PLATFORM_NAME_UPPERCASE}
   RENDERER
-  RHI_OPENGL
+  #RHI_OPENGL
   RHI_VULKAN
   EXAMPLES_MIMALLOC
   TARGET_PROPERTIES
