--- a/Engine/CMakeLists.txt
+++ b/Engine/CMakeLists.txt
@@ -22,5 +22,5 @@
 # Current package
 ################################################################################
 re_add_subdirectory(Source)
-re_add_subdirectory(Samples)
-#re_add_subdirectory(Tools)
+#re_add_subdirectory(Samples)
+re_add_subdirectory(Tools)
