--- a/Engine/Source/Base/REInput/CMakeLists.txt
+++ b/Engine/Source/Base/REInput/CMakeLists.txt
@@ -40,6 +40,7 @@ re_add_target(
     PUBLIC
       RECore
       External::glm
+      External::openvr
   RUNTIME_DEPENDENCIES
     PUBLIC
       RECore
