[REAssetImporter] Added boilerplate code for new asset importer library.

--- a/Engine/Source/Editor/CMakeLists.txt
+++ b/Engine/Source/Editor/CMakeLists.txt
@@ -22,5 +22,5 @@
 # Current package
 ################################################################################
 re_add_subdirectory(RERendererToolkit)
+re_add_subdirectory(REAssetImporter)
 re_add_subdirectory(REEd)
-
